# quiver-sdk

./: DEPLOYMENT.md  LICENSE  README.md  TESTS.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md
examples/cron/: README.md  changelog-generator.cron.md  code-style-audit.cron.md  daily-code-review.cron.md  dead-code-finder.cron.md  dependency-check.cron.md  documentation-check.cron.md  performance-baseline.cron.md  test-coverage-report.cron.md  type-check-strict.cron.md  weekly-metrics-summary.cron.md
examples/cron/events/: pr-changelog-check.event.md  pr-review.event.md  pr-test-coverage.event.md
examples/hooks/: PostToolUse.py  PostToolUse.sh  PreToolUse.py  PreToolUse.sh  PreToolUse_BlockDestructive.sh  PreToolUse_InjectContext.py  PreToolUse_InjectFileContext.sh  PreToolUse_RequireReview.sh  README.md  SessionShutdown.sh  TaskComplete.sh  TaskStart.sh
examples/plugins/: README.md  metrics_plugin.py  safety_plugin.py  web_search_plugin.py
examples/plugins/agents-squad/: README.md
examples/plugins/agents-squad/agents/: inquisitor.md  oracle.md  phantom.md
quiver_sdk/: __init__.py  agent.py  exceptions.py  tools.py  types.py  utils.py
quiver_sdk/core/: __init__.py  quiver_core.py
quiver_sdk/core/hub/: __init__.py  client.py  server.py
quiver_sdk/core/mcp/: __init__.py  client.py  manager.py
quiver_sdk/core/storage/: __init__.py  sqlite_store.py
quiver_sdk/core/tools/: __init__.py  apply_patch.py  bash.py  definitions.py  editor.py  file_read.py  search.py  web_fetch.py
quiver_sdk/llms/: __init__.py  gateway.py
quiver_sdk/llms/providers/: __init__.py  anthropic.py  base.py  bedrock.py  google.py  mistral.py  openai.py  openai_compatible.py  registry.py
skills/quiver-sdk/: SKILL.md
skills/quiver-sdk/references/agent/: REFERENCE.md  api.md  gotchas.md  patterns.md
skills/quiver-sdk/references/clinecore/: REFERENCE.md  api.md  gotchas.md  patterns.md
skills/quiver-sdk/references/events/: REFERENCE.md
skills/quiver-sdk/references/multi-agent/: REFERENCE.md
skills/quiver-sdk/references/plugins/: REFERENCE.md
skills/quiver-sdk/references/production/: REFERENCE.md
skills/quiver-sdk/references/providers/: REFERENCE.md
skills/quiver-sdk/references/scheduling/: REFERENCE.md
skills/quiver-sdk/references/tools/: REFERENCE.md
tests/: test_agent.py  test_cline_core.py  test_events.py  test_hooks.py  test_plugins.py  test_tools.py
