[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quiver-sdk"
version = "1.0.0"
description = "Quiver Agent SDK for Python — build AI agents with tools, memory, and multi-provider LLM support"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Quiver", email = "support@quiver.dev" }]
keywords = [
  "ai",
  "agent",
  "llm",
  "quiver",
  "anthropic",
  "openai",
  "gemini",
  "bedrock",
  "mistral",
  "mcp",
  "tool-use",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "nanoid>=2.0.0",
]

[project.optional-dependencies]
# Individual provider extras
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.55.0"]
google = ["google-generativeai>=0.8.0"]
bedrock = ["boto3>=1.35.0"]
mistral = ["mistralai>=1.0.0"]

# HTTP (for web fetch tool)
http = ["aiohttp>=3.10.0"]

# Hub (WebSocket server/client)
hub = ["websockets>=13.0"]

# All providers + features
all = [
  "anthropic>=0.40.0",
  "openai>=1.55.0",
  "google-generativeai>=0.8.0",
  "boto3>=1.35.0",
  "mistralai>=1.0.0",
  "aiohttp>=3.10.0",
  "websockets>=13.0",
]

# Development
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "anthropic>=0.40.0",
  "openai>=1.55.0",
  "aiohttp>=3.10.0",
  "websockets>=13.0",
]

[project.urls]
Homepage = "https://quiver.dev"
Documentation = "https://docs.quiver.dev"
Repository = "https://github.com/quiverdev/quiver-sdk"
"Bug Tracker" = "https://github.com/quiverdev/quiver-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["quiver_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "/quiver_sdk",
  "/README.md",
  "/pyproject.toml",
  "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["quiver_sdk", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501", "N803", "N806"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
